# FRsutils

./: .gitignore  Doxyfile  README.md  gridsearch_results.xlsx  implicator_info.md  implicators_info.md  itfrs_info.md  normalized_data.npy.npz  owa_weights_info.md  owafrs_info.md  pyproject.toml  pytest_training.docx  run.json  setup.py  tnorms_info.md  vqrs_info.md
FRsutils/: __init__.py  lessons_learned.txt
FRutils/: Doxyfile  cli.py  lessons_learned.txt
docs/: ____init_____8py.html  ____init_____8py.js  ____init_____8py_source.html  annotated.html  annotated_dup.js  approximations_8py.html  approximations_8py.js  approximations_8py_source.html  classes.html  classfrsutils_1_1core_1_1approximations_1_1_fuzzy_rough_model.html  classfrsutils_1_1core_1_1approximations_1_1_fuzzy_rough_model.js  classfrsutils_1_1core_1_1approximations_1_1_fuzzy_rough_model__coll__graph.dot  classfrsutils_1_1core_1_1approximations_1_1_fuzzy_rough_model__inherit__graph.dot  classfrsutils_1_1core_1_1approximations_1_1_fuzzy_rough_model_a5c165bfcfd72c14a109317a6e580c4da_cgraph.dot  classfrsutils_1_1core_1_1approximations_1_1_fuzzy_rough_model_ab3f94077d0e00297f7f077d3cfa49112_icgraph.dot  classfrsutils_1_1core_1_1models_1_1itfrs_1_1_i_t_f_r_s.html  classfrsutils_1_1core_1_1models_1_1itfrs_1_1_i_t_f_r_s.js  classfrsutils_1_1core_1_1models_1_1itfrs_1_1_i_t_f_r_s__inherit__graph.dot  classfrsutils_1_1core_1_1models_1_1itfrs_1_1_i_t_f_r_s_aa63eb5a7348990beb4a6124df043a861_cgraph.dot  classfrsutils_1_1core_1_1models_1_1itfrs_1_1_i_t_f_r_s_aa63eb5a7348990beb4a6124df043a861_icgraph.dot  (+158 more)
(+369 files in other folders)
