[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my-awesome-lib"
version = "0.1.0"
description = "A sample Python library with submodules and data files"
readme = "README.md"
authors = [{ name = "Your Name", email = "your@email.com" }]
license = { text = "MIT" }
requires-python = ">=3.7"
dependencies = ["numpy", "scikit-learn"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent"
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["my_awesome_lib"]

[tool.setuptools.package-data]
"my_awesome_lib" = ["data/*.yaml", "models/*.pkl"]
